# crypto-scalper

./: .env.example  .gitignore  .replit  Cargo.toml  INSTALL.md  LICENSE  README.md  replit.md  replit.nix
.agents/skills/aria-runtime-testing/: SKILL.md
.github/workflows/: ci.yml
config/: aggressive.toml  default.toml  paper.toml  production.toml  replit.toml
docs/: ARCHITECTURE.md  CONFIG.md  CONTROL.md  QUANT_ROADMAP.md  SURVIVAL.md
src/: config.rs  errors.rs  lib.rs  main.rs  quant.rs
src/agents/: brain.rs  bus.rs  control.rs  data.rs  execution.rs  feeds.rs  learning.rs  manager.rs  messages.rs  mod.rs  monitor.rs  risk.rs  signal.rs  survival.rs  watchdog.rs
src/backtest/: data_loader.rs  engine.rs  metrics.rs  mod.rs
src/data/: kline_bootstrap.rs  mod.rs  ohlcv_builder.rs  order_book.rs  types.rs  ws_client.rs
src/execution/: binance.rs  exchange.rs  mod.rs  orders.rs  paper.rs  position.rs  quality.rs  risk.rs
src/feeds/: alt_data.rs  fear_greed.rs  funding.rs  funding_arb.rs  mod.rs  news.rs  onchain.rs  options.rs  sentiment.rs
src/indicators/: adx.rs  atr.rs  bollinger.rs  choppiness.rs  ema.rs  keltner.rs  mod.rs  roc.rs  rsi.rs  vwap.rs
src/llm/: context_builder.rs  engine.rs  mod.rs  prompts.rs  response_parser.rs
src/microstructure/: mod.rs  ofi.rs  toxicity.rs  vpin.rs
src/monitoring/: logger.rs  metrics.rs  mod.rs  telegram.rs
src/portfolio/: correlation.rs  kelly.rs  mod.rs  var.rs  vol_target.rs
src/research/: decay.rs  export.rs  ic.rs  mod.rs  report.rs  significance.rs  walk_forward.rs
src/strategy/: alpha_gate.rs  ema_ribbon.rs  hmm.rs  kalman.rs  mean_reversion.rs  mod.rs  momentum.rs  multi_timeframe.rs  pairs.rs  regime.rs  squeeze.rs  state.rs  vwap_scalp.rs
