[package]
name = "crypto-scalper"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "ARIA — LLM-Powered Autonomous Crypto Scalper Bot"
license = "MIT"
repository = "https://github.com/whaledecoder/crypto-scalper"
readme = "README.md"

[[bin]]
name = "aria"
path = "src/main.rs"

[lib]
name = "crypto_scalper"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Using native-tls (system OpenSSL) for both crates avoids the
# `CaUsedAsEndEntity` / `UnknownIssuer` chain-validation issues that
# rustls-webpki sometimes hits on Termux/Android and other embedded
# targets where the certificate chain ordering isn't pristine.
tokio-tungstenite = { version = "0.21", default-features = false, features = ["native-tls", "connect"] }

# HTTP & networking
reqwest = { version = "0.12.5", default-features = false, features = ["json", "native-tls", "gzip"] }
futures-util = "0.3"
url = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto signing (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
openssl = { version = "0.10", features = ["vendored"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1.10", features = ["v4"] }
parking_lot = "0.12"
dashmap = "5"
rand = "0.8"

# HTTP server for metrics/dashboard
axum = { version = "0.7.5" }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# RSS / Atom feed parsing
feed-rs = "2.0"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
